@@ -1,1 +1,3 @@
 name = survival
+description = Adds several survival related items.
+depends = farming, default, wool, beds, thirsty
